# base-prelude

./: .travis.yml  CHANGELOG.md  base-prelude.cabal  build.bash  cabal.project  stack.yaml
.github/workflows/: cd.yaml  ci.yaml  integrate.yaml
