name:
  base-prelude
version:
  0.1.15
synopsis:
  The most complete prelude formed from only the "base" package
description:
  A library which reexports all non-conflicting and
  most general definitions from the \"base\" package.
  This includes APIs for applicatives, arrows, monoids, foldables, traversables,
  exceptions, generics, ST, MVars and STM.
  .
  This package will never have any dependencies other than \"base\".
category:
  Prelude
homepage:
  https://github.com/nikita-volkov/base-prelude 
bug-reports:
  https://github.com/nikita-volkov/base-prelude/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2014, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/base-prelude.git


library
  hs-source-dirs:
    library
  other-modules:
  exposed-modules:
    BasePrelude
  build-depends:
    base >= 4.6 && < 4.9
  default-language:
    Haskell2010
